openshift/pipelines/nexus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  selector:
    app: nexus
  ports:
    - port: 8081
      targetPort: 8081-tcp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: docker.io/sonatype/nexus3
          ports:
            - containerPort: 8081
              name: 8081-tcp
          livenessProbe:
            httpGet:
              path: /
              port: 8081-tcp
          readinessProbe:
            exec:
              command:
                - cat
                - /nexus-data/karaf.pid
          # nexus has lots of init to do first time so lets give
          # more time for that to happen
          startupProbe:
            httpGet:
              path: /
              port: 8081-tcp
            failureThreshold: 18
            periodSeconds: 10
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          emptyDir: {}
