openshift/pipelines/route-fruits-app-github-webhook.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fruits-app-github-webhook
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: fruits-app-github-webhook
spec:
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: el-fruits-app-github-webhook
    weight: 100
  tls:
    termination: edge
